--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Hello World</title>
+		<title>Lex Luthor</title>
 		<meta charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
 	</head>
