--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.min.css" />
 	</head>
 	<body>
-
+		<div class="sandra">
+			
+		</div>
+		<script src="assets/js/class.js" type="text/javascript"></script>
 	</body>
 </html>
