--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<div class="sandra">
-			
+			<h1>Hello, World</h1>
 		</div>
 		<script src="assets/js/class.js" type="text/javascript"></script>
 	</body>
